[gd_scene load_steps=5 format=3 uid="uid://cq6lw78mp1nqh"]

[ext_resource type="Script" path="res://Scripts/experience_drop.gd" id="1_wfhpn"]
[ext_resource type="Texture2D" uid="uid://c1fl4fo50ebox" path="res://Sprites/glowing_circle-white.png" id="2_x8f04"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sd7tg"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_s253p"]
radius = 6.08276

[node name="ExperienceDrop" type="Node2D"]
script = ExtResource("1_wfhpn")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
self_modulate = Color(1, 1, 0.509804, 1)
amount = 3
process_material = SubResource("ParticleProcessMaterial_sd7tg")
texture = ExtResource("2_x8f04")
lifetime = 0.1

[node name="GlowingCircle-white" type="Sprite2D" parent="."]
self_modulate = Color(0.662745, 0.662745, 1, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_x8f04")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 65

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_s253p")
debug_color = Color(0.27451, 0.501961, 1, 0.419608)

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
